--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@datagrupo/dg-crud": "^0.0.64",
+    "@datagrupo/dg-crud": "^0.0.75",
     "@popperjs/core": "^2.11.6",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "bootstrap": "^5.2.1",
     "json-server": "^0.17.0",
+    "ngx-mask": "^12.0.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
