--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.4",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "dg-crud": "../../../../../datagrupo/_libs/lib-dg-crud/dist/dg-crud"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.5",
