--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@popperjs/core": "^2.11.6",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.11.1",
     "json-server": "^0.17.0",
     "ngx-mask": "^12.0.0",
     "rxjs": "~7.5.0",
