--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "db-json-server": "json-server --watch db.json"
+    "db-json-server": "json-server --watch db.json",
+    "homolog-vps": "pm2 start ecosystem.config.js --env homolog"
   },
   "private": true,
   "dependencies": {
